--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,4 @@
-# Abtrak {.unnumbered}
+# Abstrak {.unnumbered}
 
 Perubahan karakteristik debit sungai akibat kegiatan antropogenik berdampak langsung pada segala mahluk hidup yang bergantung pada sungai tersebut. Selain daripada manusia, sungai merupakan tempat hidup habitat akuatik yang perlu dijaga kelestariannya. Dari sisi hidrologi mitigasi terhadap kebutuhan minimal air di sungai ini sudah dituangkan dalam bentuk "debit lingkungan" atau "debit pemeliharaan", salah satu metode yang disarankan dalam aturan PP No. 38 Tahun 2011 adalah Q~95~. Akan tetapi metode ini hanya didasarkan pada kebutuhan debit minimum sungai, tanpa melihat respon habitat yang ada di dalamnya.
 
